--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,24 +7,19 @@ on:
     branches:
       - master 
 jobs:
-  terraform:
+  build:
     runs-on: ubuntu-latest
-
-    env:
-      KUBECONFIG: ${{ secrets.KUBECONFIG }}
-    
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: actions/checkout@v2
+      
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        terraform_version: 1.0.0
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
       
-    - name: Terraform Init
-      run: terraform -chdir=./terraform init
-      
-    - name: Terraform Plan
-      run: terraform -chdir=./terraform plan -var="kubeconfig=${{ secrets.KUBECONFIG }}"
-      id: plan
+    - name: Build and Push Docker Images
+      run: |
+        docker build ./auth-service -t ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
