--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "express": "^4.19.2",
+    "mongoose": "^8.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
