--- a/terraform/yml_manifests/auth-service.yaml
+++ b/terraform/yml_manifests/auth-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: auth-srv
   namespace: default
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: auth-service
   ports:
