--- a/terraform/yml_manifests/ingress-srv.yaml
+++ b/terraform/yml_manifests/ingress-srv.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-srv
-  namespace: ingress-nginx
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
