--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.1.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
