--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,13 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+    - name: Run Unit Tests
+      run: |
+        export JWT_SECRET=secret123
+        docker build ./auth-service -t ${{secrets.DOCKER_USERNAME}}/auth-service:latest
+        docker run ${{secrets.DOCKER_USERNAME}}/auth-service:latest npm test
       
     - name: Build and Push Docker Images
       run: |
