--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
 
     - name: Run Unit Tests
       run: |
-        export JWT_SECRET=secret123
+        docker 
         docker build ./auth-service -t ${{secrets.DOCKER_USERNAME}}/auth-service:latest
-        docker run ${{secrets.DOCKER_USERNAME}}/auth-service:latest npm test
+        docker run -e JWT_SECRET=secret123 ${{secrets.DOCKER_USERNAME}}/auth-service:latest npm test
       
     - name: Build and Push Docker Images
       run: |
