--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Run Unit Tests
       run: |
         sudo apt-get install libcurl4
-        docker build ./auth-service -t ${{secrets.DOCKER_USERNAME}}/auth-service:latest
-        docker run -e JWT_SECRET=secret123 ${{secrets.DOCKER_USERNAME}}/auth-service:latest npm test
-      
+        cd auth-service && npm install && npm run test:ci
+        
     - name: Build and Push Docker Images
       run: |
         docker build ./auth-service -t ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
