--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Run Unit Tests
       run: |
         sudo apt-get install libcurl4
+        export ENVIRONMENT=dev
         export JWT_SECRET=secret123
         cd auth-service && npm install && npm run test:ci
 
