more testing modifications

--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -9,7 +9,7 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "TestEnvironment": "node",
+    "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./src/testing/setup.ts"
     ]
