--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sneakerstop/shared": "^1.0.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
