add mongo_uri env var

--- a/terraform/yml_manifests/auth-depl.yaml
+++ b/terraform/yml_manifests/auth-depl.yaml
@@ -17,6 +17,8 @@ spec:
         - name: auth-service
           image: eddie1322/auth-service:latest
           env:
+            - name: MONGO_URI
+              value: mongodb://auth-mongo-srv:27017/auth
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
