--- a/.github/workflows/test-kafka.yml
+++ b/.github/workflows/test-kafka.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup K8S Cluster
-        uses: angineerd/setup-kind@v0.5.0
+        uses: engineerd/setup-kind@v0.5.0
         with:
           version: v0.11.1
       
