--- a/.github/workflows/test-kafka.yml
+++ b/.github/workflows/test-kafka.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Wait for Kafka resources to bready
         run: |
-          kubectl wait --for=condition=Ready --timeout=300s pod -l app.kubernetes.io/name=kafka
-          kubectl wait --for=condition=Ready --timeout=300s pod -l app.kubernetes.io/name=kcat
+          kubectl wait --for=condition=Ready --timeout=300s pod --all 
+          kubectl wait --for=condition=Ready --timeout=300s pod --all
       
       - name: Send and Receive Kafka Message using kcat
         run: |
