--- a/sneaker-service/package.json
+++ b/sneaker-service/package.json
@@ -23,11 +23,13 @@
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/kafkajs": "^1.9.0",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
