--- a/sneaker-service/package.json
+++ b/sneaker-service/package.json
@@ -25,12 +25,16 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/kafkajs": "^1.9.0",
     "@types/mongoose": "^5.11.97",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.4.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
