--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build Terraform via Docker
         run: |
           cd terraform/${{ matrix.env }}
-          docker build -t ${{ matrix.env }}-tf-test --build-arg ENV=${{ matrix.env }} 
+          docker build -t ${{ matrix.env }}-tf-test --build-arg ENV=${{ matrix.env }} . 
 
       - name: Terraform Validate
         run: |
