--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -15,6 +15,9 @@ COPY ./modules ./modules
 # Copy the local Terraform configuration files into the container
 COPY ./${ENV} ./${ENV}
 
+# Verify the contents of the ENV directory
+RUN ls -la ./${ENV}
+
 # Combine the cd command with subsequent commands
 RUN cd ./${ENV} && terraform init && terraform validate
 
