--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -15,8 +15,7 @@ COPY ./modules ./modules
 # Copy the local Terraform configuration files into the container
 COPY ./${ENV} ./${ENV}
 
-# List contents for debugging
-RUN ls -la ./${ENV}
 
-# Set the command to run Terraform commands
-ENTRYPOINT sh -c "cd ./${ENV} && terraform init && terraform validate"
+RUN cd ./${ENV} && terraform init && terraform validate
+
+
