update payment service

--- a/terraform/dev/yml_manifests/payment-depl.yaml
+++ b/terraform/dev/yml_manifests/payment-depl.yaml
@@ -22,3 +22,5 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_SECRET
+            - name: MONGO_URI
+              value: mongodb://sneaker-mongo-srv:27017/payment
