--- a/terraform/dev/yml_manifests/ingress-srv.yaml
+++ b/terraform/dev/yml_manifests/ingress-srv.yaml
@@ -39,4 +39,12 @@ spec:
                 port:
                   number: 3001
 
+          - path: /api/payments/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: payment-service
+                port:
+                  number: 3003
+
                 
