--- a/terraform/dev/yml_manifests/ingress-srv.yaml
+++ b/terraform/dev/yml_manifests/ingress-srv.yaml
@@ -38,12 +38,11 @@ spec:
                 name: sneaker-srv
                 port:
                   number: 3001
-
           - path: /api/payments/?(.*)
             pathType: Prefix
             backend:
               service:
-                name: payment-service
+                name: payment-srv
                 port:
                   number: 3003
 
