--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -25,12 +25,14 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/kafkajs": "^1.9.0",
     "@types/mongoose": "^5.11.97",
+    "@types/stripe": "^8.0.417",
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.4.0",
+    "stripe": "^16.8.0",
     "ts-jest-mocker": "^1.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
