--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x' 
+
+    - name: Get Changed Files
+      run: |
+        echo "$(make test)"
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
