--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Get Changed Files
       run: |
-        echo "$(make test)"
+        echo "$(make get_changed_files)"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
