--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,9 @@ jobs:
         run: |
           cd terraform
           docker build -t ${{ matrix.env }}-tf-test --build-arg ENV=${{ matrix.env }} .
-      
+  
 
-
-  build:
-    strategy:
-      matrix:
-        service_name: [auth-service, sneaker-service, order-service, payment-service]
-
+  changed_files:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -39,9 +34,20 @@ jobs:
       with:
         python-version: '3.x' 
 
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v45
+     
     - name: Get Changed Files
       run: |
-        echo "$(make get_changed_files)"
+        echo "$(make get_changed_files changed_files=${{ steps.changed-files.outputs.all_changed_files }})"
+
+
+
+  build:
+    strategy:
+      matrix:
+        service_name: [auth-service, sneaker-service, order-service, payment-service]
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
