--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,19 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v45
 
-      - name: Get Changed Files
+      - name: Print Changed Files
+        id: print-changed-files
         run: |
-          echo "$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")"
-      
+          changed_files="$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")"
+          echo "changed_files=$changed_files" >> $GITHUB_ENV
+
+
 
 
   build:
     strategy:
       matrix:
-        service_name: [auth-service, sneaker-service, order-service, payment-service]
+        service_name: ${{ env.changed_files }}
 
     runs-on: ubuntu-latest
     steps:
