--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         id: print-changed-files
         run: |
           changed_files="$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")"
-          echo "changed_files=$changed_files" >> $GITHUB_ENV
+          echo "::set-output name=changed_files::$changed_files"
 
 
 
@@ -53,7 +53,7 @@ jobs:
   build:
     strategy:
       matrix:
-        service_name: ${{ env.changed_files }}
+        service_name: ${{ needs.changed-files.outputs.changed_files }}
 
     runs-on: ubuntu-latest
     steps:
