--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - changed-files
     steps:
       - name: test
-        run: echo ${{ needs.changed-files.outputs.changed_files}}
+        run: echo "${{ needs.changed-files.outputs.changed_files}}"
         
 
   build:
