--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Print Changed Files
         id: print-changed-files
         run: |
-          changed_files="$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")"
+          changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
           echo "::set-output name=changed_files::$changed_files"
           echo "changedfiles: $changed_files"
 
