--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,7 @@ jobs:
         id: print-changed-files
         run: |
           changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
-          echo "::set-output name=changed_files::$changed_files"
-          echo "changedfiles: $changed_files"
+          echo "this is changed_files:$changed_files"
 
   test-output:
     runs-on: ubuntu-latest
