--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,8 @@ jobs:
         run: |
           changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
           changed_files_json=$(echo $changed_files | jq -R -s -c 'split(" ")')
-          echo "files_matrix=$changed_files_json" >> $GITHUB_OUTPUT
+          echo "changed_files_json $changed_files_json"
+          echo "files_matrix=$changed_files" >> $GITHUB_OUTPUT
 
 
   test-output:
