--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,8 @@ jobs:
         id: print-changed-files
         run: |
           changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
-          changed_files_json=$(echo $changed_files | jq -R -s -c 'split(" ")')
-          echo "changed_files_json $changed_files_json"
-          echo "files_matrix=$changed_files" >> $GITHUB_OUTPUT
+          IFS=$'\n' read -r -d '' -a changed_files_array <<< "$changed_files"
+          echo "files_matrix=$changed_files_array" >> $GITHUB_OUTPUT
 
 
   test-output:
