--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,7 @@ jobs:
         id: print-changed-files
         run: |
           changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
-          IFS=$'\n' read -r -d '' -a changed_files_array <<< "$changed_files"
-          echo "files_matrix=$changed_files_array" >> $GITHUB_OUTPUT
+          echo "files_matrix=$changed_files" >> $GITHUB_OUTPUT
 
 
   test-output:
