--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         id: print-changed-files
         run: |
           changed_files=$(make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}")
-          test=${changed_files1:-1}
+          test=${changed_files:-1}
           IFS=', ' read -r -a array <<< "$test"
           for element in "${test[@]}"; do
             echo "$element"
