--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - changed-files
     steps:
       - name: Display Changed Files
-        run: "test: ${{ steps.print-changed-files.outputs.files_matrix }}"
+        run: "echo test: ${{ needs.print-changed-files.outputs.files_matrix }}"
         
 
   build:
