--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
 
   changed-files:
     runs-on: ubuntu-latest
+    outputs:
+      files_matrix: ${{ steps.print-changed-files.outputs.files_matrix }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -50,20 +52,12 @@ jobs:
         run: |
           echo "test: ${{ steps.print-changed-files.outputs.files_matrix }}"
 
-
-  test-output:
-    runs-on: ubuntu-latest
-    needs:
-      - changed-files
-    steps:
-      - name: Display Changed Files
-        run: "echo test: ${{ needs.changed-files.outputs.files_matrix }}"
-        
-
+      
   build:
+    needs: changed-files
     strategy:
       matrix:
-        service_name: ["auth-service"]
+        service_name: ${{ needs.changed-files.outputs.files_matrix }}
 
     runs-on: ubuntu-latest
     steps:
