--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,20 @@ on:
       - master 
 jobs:
 
+  python-unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+
+      - name: Run Python Unit Tests
+        run: |
+          make python_tests
+        
+
   terraform-validate:
     strategy:
       matrix:
@@ -24,6 +38,8 @@ jobs:
 
   changed-files:
     runs-on: ubuntu-latest
+    needs:
+      - python-unit-tests
     outputs:
       files_matrix: ${{ steps.print-changed-files.outputs.files_matrix }}
     steps:
@@ -47,11 +63,6 @@ jobs:
         id: print-changed-files
         run: |
           make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}"
-
-      - name: check output
-        run: |
-          echo "test: ${{ steps.print-changed-files.outputs.files_matrix }}"
-
       
   build:
     needs: changed-files
