--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       
   build:
     needs: changed-files
-    if: ${{ fromJson(needs.changed-files.outputs.files_matrix) != fromJson('[]') }}
+    if: ${{ fromJson(needs.changed-files.outputs.files_matrix) != '' }}
     strategy:
       matrix:
         service_name: ${{ fromJson(needs.changed-files.outputs.files_matrix) }}
