--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,11 @@ jobs:
         id: print-changed-files
         run: |
           make get_changed_files changed_files="${{ steps.changed-files.outputs.all_changed_files }}"
-      
+   
+   
   build:
     needs: changed-files
-    if: ${{ ${fromJson(needs.changed-files.outputs.files_matrix)[@]} != 0 }}
+    if: ${{ needs.changed-files.outputs.files_matrix != '[]' }}
     strategy:
       matrix:
         service_name: ${{ fromJson(needs.changed-files.outputs.files_matrix) }}
